# nobook

./: .gitignore  Makefile  README.md  package.json  pyproject.toml
.github/workflows/: tests.yml
examples/: errors.py  hello.py
jupyterlab-ext/: README.md  install.json  package.json  tsconfig.json
jupyterlab-ext/src/: index.ts
nobook/: __init__.py  __main__.py  cli.py  executor.py  formats.py  parser.py  writer.py
nobook/jupyter/: contentsmanager.py  serverextension.py
nobook/labextension/: package.json
nobook/labextension/static/: 509.39ab8ba0355ff7aefccb.js  665.21b9713393cd8f7d22c6.js  remoteEntry.51fd2c673171b01bb07e.js  style.js
src/: index.ts
style/: base.css
tests/: test_contentsmanager.py  test_executor.py  test_parser.py  test_writer.py
tests/fixtures/: simple.py
vscode-ext/: .vscodeignore  README.md  package.json
vscode-ext/src/: extension.ts  serializer.ts
vscode-ext/src/parser/: index.ts  parser.ts  types.ts
vscode-ext/src/ui/: commands.ts  index.ts  statusBar.ts
