[build-system]
requires = ["hatchling", "hatch-jupyter-builder>=0.5", "jupyterlab>=4"]
build-backend = "hatchling.build"

[project]
name = "nobook"
description = "Plain .py files as notebooks"
readme = "README.md"
license = {text = "WTFPL"}
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = ["jupyter-server>=2", "notebook>=7"]

authors = [
    {name = "Alexey"}
]

keywords = ["jupyter", "notebook", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
nobook = "nobook.cli:main"

[project.entry-points."jupyter_server.serverextension"]
nobook = "nobook.jupyter.serverextension"

[dependency-groups]
dev = [
    "hatch",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["nobook"]

[tool.hatch.build.targets.wheel.shared-data]
"nobook/labextension" = "share/jupyter/labextensions/nobook-labextension"
"install.json" = "share/jupyter/labextensions/nobook-labextension/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["nobook/labextension/package.json"]
skip-if-exists = ["nobook/labextension/package.json"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = ["jlpm"]
build_cmd = "build:prod"

[tool.hatch.version]
path = "nobook/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
